--- a/Fendi/Fendi.ipynb
+++ b/Fendi/Fendi.ipynb
@@ -324,7 +324,7 @@
     "mytable <- table(df$Attrition_Flag)\n",
     "lbls <- paste(names(mytable), \"\\n\", mytable, sep=\"\")\n",
     "pie(mytable, labels = lbls,\n",
-    "   main=\"Pie Chart of Attrition_Flag\\n (with sample sizes)\")"
+    "   main=\"Pie Chart of Attrition_Flag\\n (with sample sizes)\")a"
    ]
   },
   {
